--- a/usr/asubst/Asubst.html
+++ b/usr/asubst/Asubst.html
@@ -9,12 +9,12 @@
 <body>
 <div style="text-align: center; font-family: monospace;"><big><big><big><big><big
  style="font-weight: bold;">Asubst</big><br>
-<small style="font-weight: bold;">V2_9</small></big></big></big></big><br>
+<small style="font-weight: bold;">V2_10</small></big></big></big></big><br>
 </div>
 <pre style="font-family: monospace;"><br><br></pre>
 <h1 style="font-family: monospace;">1. General syntax</h1>
 <span style="font-family: monospace;">Usage: asubst [ { &lt;option&gt;
-} ] &lt;find_pattern&gt; &lt;replace_pattern&gt; [ { &lt;file&gt; } ]</span><br
+} ] &lt;find_pattern&gt; &lt;replace_string&gt; [ { &lt;file&gt; } ]</span><br
  style="font-family: monospace;">
 <span style="font-family: monospace;">or&nbsp;&nbsp; : asubst -h |
 --help | -v | --version</span><br style="font-family: monospace;">
@@ -28,7 +28,7 @@ extended regex and for ignorecase pattern matching.</span><br
  style="font-family: monospace;">
 <h1 style="font-family: monospace;">2. Options</h1>
 <span style="font-family: monospace;">-b or --basic : use 'basic' regex
-instead of the default 'extended' regex.</span><br
+instead of the default 'extended' regex for &lt;find_pattern&gt;.</span><br
  style="font-family: monospace;">
 <span style="font-family: monospace;">-i or --ignorecase : do case
 insensitive match checking of &lt;find_pattern&gt;.</span><br
@@ -44,21 +44,23 @@ substitutions per file.</span><br style="font-family: monospace;">
 substitution and its line number.</span><br
  style="font-family: monospace;">
 <span style="font-family: monospace;">-f or --file : indicate that
-&lt;file&gt; will contain names of files to process.</span><br
+&lt;file&gt; contains the names of files to process.</span><br
  style="font-family: monospace;">
 <span style="font-family: monospace;">-m &lt;max&gt; or
 --max=&lt;max&gt; : stop processing each file after &lt;max&gt;
 substitutions, (0 for infinite).</span><br
  style="font-family: monospace;">
-<span style="font-family: monospace;">-- : to stop the list of options.
+<span style="font-family: monospace;">-- : to end the list of options.
 If &lt;find_pattern&gt; is "-b", then use <br>
-asubst [ { &lt;option&gt; } ] -- "-b" &lt;replace_pattern&gt; [ {
+&nbsp;&nbsp;&nbsp;&nbsp; asubst [ { &lt;option&gt; } ] -- "-b"
+&lt;replace_pattern&gt; [ {
 &lt;file&gt; } ].</span><br>
 <h1 style="font-family: monospace;">3. Find pattern</h1>
-<span style="font-family: monospace;">&lt;find_pattern&gt; ::= { [
-&lt;regex&gt; ] \n } [ &lt;regex&gt; ]</span><br
- style="font-family: monospace;">
-<span style="font-family: monospace;">If there is no "\n", then the
+<span style="font-family: monospace;">&lt;find_pattern&gt;&nbsp;&nbsp;
+::= &lt;regex&gt; | &lt;multiple_regex&gt;<br>
+&lt;multiple_regex&gt; ::= { [ &lt;regex&gt; ] \n } [ &lt;regex&gt; ]<br>
+</span><span style="font-family: monospace;"></span><span
+ style="font-family: monospace;">If there is no "\n", then the
 regex can be any regular expression. If it does not start with '^' nor
 ends with '$', then it is applied several times to each input line
 (each time to the text following previous substitution).</span><br
@@ -73,17 +75,16 @@ ends with '$', then it is applied several times to each input line
 -&gt; "tutu"</span><br style="font-family: monospace;">
 <br style="font-family: monospace;">
 <span style="font-family: monospace;">If there are "\n", they delimit
-several regex that will apply to several lines.</span><br
+several regex that will apply to several successive lines.</span><br
  style="font-family: monospace;">
 <span style="font-family: monospace;">In this case, '^' and '$' are
 forbidden around a "\n" (they will automatically be added).</span><br
  style="font-family: monospace;">
 <span style="font-family: monospace;">Search pattern is split into
-several regex and \n patterns, each line of input is split in two
+several regex and "\n" patterns, each line of input is split in two
 input items: text then newline, pattern 1 is compared to item 1, if
-they match, pattern 2 is compared to item 2.</span><br
+they match, pattern 2 is compared to item 2...</span><br
  style="font-family: monospace;">
-<br style="font-family: monospace;">
 <span style="font-family: monospace;">Examples:</span><br
  style="font-family: monospace;">
 <span style="font-family: monospace;">r&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -100,25 +101,33 @@ and ^r2</span><br style="font-family: monospace;">
  style="font-family: monospace;">
 <span style="font-family: monospace;">The difference between "r1\n" and
 "r1$" is that "r1\n" is two regex. With "r1\n", the string matching
-"r1" AND the following New_Line will be substituted. With "r1$", only
-the string matching "r1" will be subtituted.</span><br
- style="font-family: monospace;">
-<span style="font-family: monospace;">The following specific '\'
+"r1" AND the following newline will be substituted. With "r1$", only
+the string matching "r1" will be subtituted. In short, </span><span
+ style="font-family: monospace;">"r1\n" means "r1 then a newline" while
+"r1$" means "r1, followed by a newline".<br>
+<br style="font-family: monospace;">
+</span><span style="font-family: monospace;">The following specific '\'
 sequences are also handled:</span><br style="font-family: monospace;">
 <span style="font-family: monospace;">- "\t, replaced by a (horiz) tab,</span><br
  style="font-family: monospace;">
 <span style="font-family: monospace;">- "\xIJ" where IJ is an
 hexadecimal number (00 to FF or ff) for a byte code.</span><br
  style="font-family: monospace;">
-<span style="font-family: monospace;">Beware that \xIJ is replaced
-before compilind the regex, so it cannot be used to avoid a given
-character. "[a\x2Dx]" is exactly the same as "[a-x]", and "\x0A" is
+<span style="font-family: monospace;">Beware that these sequences are
+replaced
+before compilind the regex, so they cannot be used to avoid&nbsp; a
+given
+character. For example, "[a\x2Dx]" is exactly the same as "[a-x]", and
+"\x0A" is
 exactly the same as "\n" (it will be used as regex delimiter).<br>
-Also notice that some regex expressions are supposed to match a "new
+<br>
+Finally, beware that some regex expressions are supposed to match a
+"new
 line" (example </span><span style="font-family: monospace;">[:blank:</span><span
- style="font-family: monospace;">] in a bracket expression) but will
+ style="font-family: monospace;">] within a bracket expression) but
+will
 not match in asubst, because the input flow/file is decomposed into
-lines then each line is compared to the regex expressions.</span>
+lines and each line is compared to a regex expression.</span>
 <h1 style="font-family: monospace;">4. Replace string<br>
 </h1>
 <span style="font-family: monospace;">The following '\' sequences are
@@ -134,22 +143,19 @@ value.</span><br style="font-family: monospace;">
 <span style="font-family: monospace;">- \RIJ where IJ is an hexadecimal
 number will be replaced by the string </span><span
  style="font-family: monospace;">matching the regex number IJ, 00 for
-the complete string,</span><br style="font-family: monospace;">
-<span style="font-family: monospace;"> (in case of a single regex (no
+the complete string,</span><span style="font-family: monospace;"> (in
+case of a single regex (no
 "\n") \R00 is equivalent to \R01).</span><br
  style="font-family: monospace;">
 <span style="font-family: monospace;">- \rIJ where IJ is an hexadecimal
-number will be replaced by the string</span><br
- style="font-family: monospace;">
-<span style="font-family: monospace;"> matching the substring J of the
-regex number I, J=0 for the complete string,</span><br
- style="font-family: monospace;">
-<span style="font-family: monospace;"> (so \R0x = \rx0).</span><br
+number will be replaced by the string</span><span
+ style="font-family: monospace;"> matching the substring J of the
+regex number I, J=0 for the complete string,</span><span
+ style="font-family: monospace;"> (so \R0x = \rx0).</span><br
  style="font-family: monospace;">
 <span style="font-family: monospace;">- \u, \l, \m for starting an
-UPPER, lower or Mixed case conversion. A</span><br
- style="font-family: monospace;">
-<span style="font-family: monospace;"> conversion ends when a new
+UPPER, lower or Mixed case conversion. A</span><span
+ style="font-family: monospace;"> conversion ends when a new
 starts, at end of line or on \c.</span><br
  style="font-family: monospace;">
 <span style="font-family: monospace;">- \c for stopping a case
@@ -159,26 +165,28 @@ Case conversion applies after (sub)string replacement.<br>
 <span style="font-family: monospace;">Examples:</span><br
  style="font-family: monospace;">
 <span style="font-family: monospace;">echo -en "toto" | asubst "t"
-"\x40"&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+"\x40"&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 -&gt; "@"</span><br style="font-family: monospace;">
 <span style="font-family: monospace;">echo -en "tito" | asubst "t."
-"&gt;\R00&lt;"&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+"&gt;\R00&lt;"&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 -&gt; "&gt;ti&lt;&gt;to&lt;"</span><br style="font-family: monospace;">
 <span style="font-family: monospace;">echo -en "toto\ntiti\ntata\n" |
-asubst ".*\n" "\R01" -&gt; "tototititata"</span><br
+asubst ".*\n" "\R01"&nbsp;&nbsp;&nbsp;&nbsp; -&gt; "tototititata"</span><br
  style="font-family: monospace;">
 <span style="font-family: monospace;">echo -en "\ntoto\ntiti\ntata" |
-asubst "\n.*" "\R02" -&gt; "tototititata"</span><br
+asubst "\n.*" "\R02"&nbsp;&nbsp;&nbsp;&nbsp; -&gt; "tototititata"</span><br
  style="font-family: monospace;">
 <span style="font-family: monospace;">echo -en "tito" | asubst
-"(.i)(.o)" "\r12&lt;-&gt;\r11"&nbsp;&nbsp;&nbsp; -&gt; "to&lt;-&gt;ti"</span><br
- style="font-family: monospace;">
+"(.i)(.o)"
+"\r12&lt;-&gt;\r11"&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -&gt;
+"to&lt;-&gt;ti"</span><br style="font-family: monospace;">
 <span style="font-family: monospace;">echo -en "tito" | asubst ".*"
-"\m\R01"&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+"\m\R01"&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 -&gt; "Tito"</span><br style="font-family: monospace;">
 <span style="font-family: monospace;">echo -en "toto" | asubst
-"(.)(.)(..)" "\u\r12\c\r11" -&gt; "Otto"</span><br
- style="font-family: monospace;">
+"(.)(.)(..)" "\u\r12\c\r11</span><span style="font-family: monospace;">\</span><span
+ style="font-family: monospace;">r13" -&gt; "Otto"<br>
 <br style="font-family: monospace;">
+</span><br style="font-family: monospace;">
 </body>
 </html>
