Make clear that -x is an option, except after --.

--- a/usr/asubst/Asubst.html
+++ b/usr/asubst/Asubst.html
@@ -51,8 +51,8 @@ substitution and its line number.</span><br
 substitutions, (0 for infinite).</span><br
  style="font-family: monospace;">
 <span style="font-family: monospace;">-- : to end the list of options.
-If &lt;find_pattern&gt; is "-b", then use <br>
-&nbsp;&nbsp;&nbsp;&nbsp; asubst [ { &lt;option&gt; } ] -- "-b"
+If &lt;find_pattern&gt; is "-pat", then use <br>
+&nbsp;&nbsp;&nbsp;&nbsp; asubst [ { &lt;option&gt; } ] -- "-pat"
 &lt;replace_pattern&gt; [ {
 &lt;file&gt; } ].</span><br>
 <h1 style="font-family: monospace;">3. Find pattern</h1>
